Changed .results to .media_result to fix className overlapping.

--- a/src/styles/Media/Media.css
+++ b/src/styles/Media/Media.css
@@ -10,7 +10,7 @@
     width: 100%;
 }
 
-.results {
+.media_results {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
